kubernetes/clusters/live/config/it-tools/internal-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools-internal
  namespace: it-tools
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "IT Tools"
    gethomepage.dev/group: "Apps"
    gethomepage.dev/icon: "it-tools.svg"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=it-tools"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "tools.${internal_domain}"
  rules:
    - backendRefs:
        - name: it-tools
          port: 80
